--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cui",
+  "name": "cui-front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -26,7 +26,8 @@
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.12",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
