--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,8 @@
       "extension": ".css"
     }
   ],
-  "easysass.targetDir": "./css/"
+  "easysass.targetDir": "./css/",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
