--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-axios": "^2.1.5",
     "vue-class-component": "^7.0.2",
     "vue-cookies": "^1.6.1",
+    "vue-i18n": "^8.15.3",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.12",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@mdi/font": "^4.7.95",
     "@types/jest": "^24.0.11",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
@@ -46,6 +48,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^4.13.0",
     "prettier": "^1.18.2",
     "sass-loader": "^8.0.0",
